# sunrise

./: .gitignore  LICENSE  README.md
capture/: Cargo.toml
capture/src/: main.rs
comp/: Cargo.toml
comp/src/: export_dmabuf.rs  gl_allocator.rs  main.rs  output_configuration.rs
gst-plugin-wayland-display/: Cargo.toml
gst-plugin-wayland-display/src/: lib.rs  utils.rs
gst-plugin-wayland-display/src/allocators/: mod.rs
gst-plugin-wayland-display/src/allocators/dma_heap/: imp.rs  mod.rs
gst-plugin-wayland-display/src/allocators/gbm/: imp.rs  mod.rs
gst-plugin-wayland-display/src/allocators/memfd/: imp.rs  mod.rs
gst-plugin-wayland-display/src/buffer_pool/: imp.rs  mod.rs
gst-plugin-wayland-display/src/buffer_pool/meta/: imp.rs  mod.rs
gst-plugin-wayland-display/src/waylandsrc/: comp.rs  imp.rs  mod.rs
gst-plugin-wayland-display/src/waylandsrc/comp/: focus.rs  input.rs  window.rs
host/: Cargo.toml
host/enet-rs/: Cargo.toml
host/src/: config.rs  crypto.rs  main.rs  serialization.rs  utils.rs
host/src/compositor/: cursor.rs  drm.rs  input.rs  mod.rs
host/src/http/: handlers.rs  mod.rs
host/src/rtsp/: mod.rs
rtsp-types/src/: lib.rs
