[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = { version = "0.29.0", features = ["dlopen", "use_system_lib"] }
wayland-protocols = { version = "0.29.4", features = ["client", "unstable_protocols"] }

[dependencies.smithay]
git = "https://github.com/smithay/Smithay.git"
default-features = false
features = ["backend_drm", "backend_egl", "renderer_gl"]
