[package]
name = "gst-plugin-wayland-display"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GStreamer Wayland Compositor Plugin"
repository = "https://github.com/drakulix/sunrise"

[lib]
name = "gstwaylanddisplay"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
static = []
capi = []
doc = []

[dependencies]
gst = { version = "0.20", package = "gstreamer", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators", features = ["v1_18"] }
gst-allocators = {version = "0.20", package = "gstreamer-allocators", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gst-base = {version = "0.20", package = "gstreamer-base", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gst-base-sys = {version = "0.20", package = "gstreamer-base-sys", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gst-sys = {version = "0.20", package = "gstreamer-sys", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gst-video = { version = "0.20", package = "gstreamer-video", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators", features = ["v1_18"] }
slog = "2.7.0"
once_cell = "1.17.0"
memfd = "0.6.2"

[dependencies.smithay]
git = "https://github.com/smithay/Smithay"
rev = "e9bdcb982f"
default-features = false
features = [ "backend_drm", "backend_gbm", "backend_egl", "backend_libinput", "backend_udev", "renderer_gl", "use_system_lib", "desktop", "wayland_frontend", "xwayland" ]

[build-dependencies]
gst-plugin-version-helper = "0.7.5"

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
